# reports-rendering-python-rust

./: .gitignore  CHEATSHEET.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  reports-rendering_python-rust.postman_collection.json  requirements.txt
.github/workflows/: run-dagger-ci-pipeline.yaml  trigger-dagger-ci-pipeline.yaml
app/grpc_client_impl/: grpc_client.py
app/grpc_client_impl/proto/: get_cpu_system_usage_pb2.py  get_cpu_system_usage_pb2.pyi  get_cpu_system_usage_pb2_grpc.py  get_cpu_user_usage_pb2.py  get_cpu_user_usage_pb2.pyi  get_cpu_user_usage_pb2_grpc.py
app/usecases/render_full_pdf/: render_full_pdf_handler.py
app/usecases/render_full_pdf/rest/: render_full_pdf_router.py
app/usecases/render_full_xlsx/: merger.py  render_full_xlsx_handler.py
app/usecases/render_full_xlsx/rest/: render_full_xlsx_router.py
app/usecases/render_full_xlsx/single_reports/: cpu_system_usage.py  cpu_user_usage.py  report_1.py  report_2.py  report_3.py
dagger_python/: README.md  main.py  requirements.txt
proto/: get_cpu_system_usage.proto  get_cpu_user_usage.proto
src/: lib.rs
